--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
               </a>
             </li>
           </ul>
+              <div class="mobile-menu">
+              <svg class="mobile-menu__icon">
+              <use xlink href="./images/icons.svg#icon-menu"></use>
+              </svg>
+            </div>
         </menu>
       </div>
     </header>
@@ -553,7 +558,7 @@
               name="newsletter-email"
               placeholder="E-mail"
             />
-            <div>
+            <div class="mobile-newsletter_button">
               <button type="submit" class="newsletter__button">
                 <span class="newsletter__button--text"
                   >Zapisz się
