--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     <footer class="footer">
       <div class="footer__wrapper container">
         <div>
-          <a href="index.html" class="page-name page-name__title">
+          <a href="index.html" class="page-name page-name__title page-name__footer">
             <span class="page-name__title--blue">Web</span>
             <span class="page-name__title--white">Studio</span>
           </a>
