--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </svg>
      </button>
 
-
+<div class="backdrop is-hidden">
       <div class="mobile-menu" data-menu>
         <div class="mobile-menu__content">
          <ul class="modal-menu-navigation">
@@ -43,6 +43,7 @@
       <use xlink href="./images/icons.svg#icon-close-btn"></use>
       </svg>
       </button>
+              </div>
               </div>
             </div>
           </div>
