--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <!-- MOBILE-MENU -->
 
-      <button type="button" class="mobile-menu__open-button" data-menu-open>
+      <button type="button" class="mobile-menu__open-button" js-open-menu>
         <svg class="mobile-menu__open-svg">
         <use xlink href="./images/icons.svg#icon-menu"></use>
         </svg>
