--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <header class="header">
       <!-- MOBILE-MENU -->
 
-      <button type="button" class="mobile-menu__open-button">
+      <button type="button" class="mobile-menu__open-button d-none">
         <svg class="mobile-menu__open-svg">
         <use xlink href="./images/icons.svg#icon-menu"></use>
         </svg>
      </button>
 
-     
-      <div class="mobile-menu">
+
+      <div class="mobile-menu d-none">
         <div class="mobile-menu__content">
          <ul class="modal-menu-navigation">
           <li class="modal-menu-navigation__item">
