--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
          </li>
         </ul>
          <ul class="mobile-menu-navigation">
-          <li class="mobile-menu-navigation__item">
-            <span class="mobile-menu-navigation__item--text">Agencja</span>
-            <span class="mobile-menu-navigation__item--text">Portfolio</span>
-            <span class="mobile-menu-navigation__item--text">Kontakt</span>
+          <li class="mobile-menu-navigation__contact">
+            <span href="tel:+48111111111" class="mobile-menu-navigation__contact--phone">+48 111 111 111</span>
+            <span href="mailto:info@devstudio.com" class="mobile-menu-navigation__contact--email">info@devstudio.com</span>
          </li>
         </ul>
          <ul class="mobile-menu-navigation">
-          <li class="mobile-menu-navigation__item">
-            <span class="mobile-menu-navigation__item--text">Agencja</span>
-            <span class="mobile-menu-navigation__item--text">Portfolio</span>
-            <span class="mobile-menu-navigation__item--text">Kontakt</span>
+          <li class="mobile-menu-navigation__social-links">
+            <span class="mobile-menu-navigation__social-links--media">Instagram</span>
+            <span class="mobile-menu-navigation__social-links--media">Twitter</span>
+            <span class="mobile-menu-navigation__social-links--media">Facebook</span>
+            <span class="mobile-menu-navigation__social-links--media">LinkedIn</span>
          </li>
         </ul>
           
