--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
         </div>
       </section>
 
-      <section>
+      <section class="our-advantages">
         <div class="container">
-          <ul class="our-advantages">
-            <li>
+          <ul class="our-advantages__list">
+            <li class="our-advantages__item">
               <div class="our-advantages__icons">
-                <svg class="our-advantages__icons--properties">
+                <svg  width="70" height="70" class="our-advantages__icons--properties">
                   <use xlink href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -255,9 +255,9 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="our-advantages__item">
               <div class="our-advantages__icons">
-                <svg class="our-advantages__icons--properties">
+                <svg width="70" height="70" class="our-advantages__icons--properties">
                   <use xlink href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -267,9 +267,9 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="our-advantages__item">
               <div class="our-advantages__icons">
-                <svg class="our-advantages__icons--properties">
+                <svg width="70" height="70" class="our-advantages__icons--properties">
                   <use xlink href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
@@ -279,9 +279,9 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="our-advantages__item">
               <div class="our-advantages__icons">
-                <svg class="our-advantages__icons--properties">
+                <svg  width="70" height="70" class="our-advantages__icons--properties">
                   <use xlink href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
