--- a/index.html
+++ b/index.html
@@ -352,6 +352,12 @@
           <h2 class="our-team-section__header">Nasz zespół</h2>
           <ul class="our-team-section__photos">
             <li class="our-team-section__photos--properties">
+               <picture>
+                <source
+                  media="(max-width: 768px)"
+                  srcset="./images/JohnDoe1@1x.jpg" 1x,
+                  srcset="./images/JohnDoe1@2x.jpg" 2x>
+
               <img
                 src="images/JohnDoe1.jpg"
                 alt="Pracownik Product Designer"
