--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           
           
       <div class="mobile-menu__close-button d-none">
-      <button class="mobile-menu__close-button--properties">
+      <button class="mobile-menu__close-button--properties mobile-menu__close-button d-none">
        <svg class="mobile-menu__close-button--icon">
       <use xlink href="./images/icons.svg#icon-close-btn"></use>
       </svg>
