--- a/index.html
+++ b/index.html
@@ -355,15 +355,27 @@
                <picture>
                 <source
                   media="(max-width: 768px)"
-                  srcset="./images/JohnDoe1@1x.jpg" 1x,
-                  srcset="./images/JohnDoe1@2x.jpg" 2x>
+                  srcset="./images/John1-mob@1x.jpg 1x,
+                  ./images/John1-mob@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/John1-tab@1x.jpg 1x,
+                  ./images/John1-tab@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/John1-desk@1x.jpg 1x,
+                  ./images/John1-desk@2x.jpg 2x"
+                  type="image/jpg">
 
               <img
-                src="images/JohnDoe1.jpg"
+                src="images/John1.jpg"
                 alt="Pracownik Product Designer"
                 width="270"
                 height="260"
               />
+              </picture>
               <p class="our-team-section__photos--names">
                 <strong>John Doe</strong>
               </p>
@@ -399,12 +411,30 @@
               </div>
             </li>
             <li class="our-team-section__photos--properties">
+                  <picture>
+                <source
+                  media="(max-width: 768px)"
+                  srcset="./images/John2-mob@1x.jpg 1x,
+                  ./images/John2-mob@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/John2-tab@1x.jpg 1x,
+                  ./images/John2-tab@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/John2-desk@1x.jpg 1x,
+                  ./images/John2-desk@2x.jpg 2x"
+                  type="image/jpg">
+
               <img
-                src="images/JohnDoe2.jpg"
-                alt="Pracownik Frontend Developer"
+                src="images/John2.jpg"
+                alt="Pracownik Product Designer"
                 width="270"
                 height="260"
               />
+              </picture>
               <p class="our-team-section__photos--names">
                 <strong>John Doe</strong>
               </p>
@@ -435,12 +465,30 @@
               </ul>
             </li>
             <li class="our-team-section__photos--properties">
+                            <picture>
+                <source
+                  media="(max-width: 768px)"
+                  srcset="./images/John3-mob@1x.jpg 1x,
+                  ./images/John3-mob@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/John3-tab@1x.jpg 1x,
+                  ./images/John3-tab@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/John3-desk@1x.jpg 1x,
+                  ./images/John3-desk@2x.jpg 2x"
+                  type="image/jpg">
+
               <img
-                src="images/JohnDoe3.jpg"
-                alt="Pracownik Marketing"
+                src="images/John3.jpg"
+                alt="Pracownik Product Designer"
                 width="270"
                 height="260"
               />
+              </picture>
               <p class="our-team-section__photos--names">
                 <strong>John Doe</strong>
               </p>
@@ -469,12 +517,30 @@
               </ul>
             </li>
             <li class="our-team-section__photos--properties">
+               <picture>
+                <source
+                  media="(max-width: 768px)"
+                  srcset="./images/John4-mob@1x.jpg 1x,
+                  ./images/John4-mob@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/John4-tab@1x.jpg 1x,
+                  ./images/John4-tab@2x.jpg 2x"
+                  type="image/jpg">
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/John4-desk@1x.jpg 1x,
+                  ./images/John4-desk@2x.jpg 2x"
+                  type="image/jpg">
+
               <img
-                src="images/JohnDoe4.jpg"
+                src="images/John4.jpg"
                 alt="Pracownik UI Designer"
                 width="270"
                 height="260"
               />
+              </picture>
               <p class="our-team-section__photos--names">
                 <strong>John Doe</strong>
               </p>
