--- a/index.html
+++ b/index.html
@@ -357,23 +357,22 @@
                   media="(max-width: 768px)"
                   srcset="./images/John1-mob@1x.jpg 1x,
                   ./images/John1-mob@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 768px)"
                   srcset="./images/John1-tab@1x.jpg 1x,
                   ./images/John1-tab@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 1200px)"
                   srcset="./images/John1-desk@1x.jpg 1x,
                   ./images/John1-desk@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
 
               <img
+              class="our-team__images"
                 src="images/John1.jpg"
                 alt="Pracownik Product Designer"
-                width="270"
-                height="260"
               />
               </picture>
               <p class="our-team-section__photos--names">
@@ -416,23 +415,22 @@
                   media="(max-width: 768px)"
                   srcset="./images/John2-mob@1x.jpg 1x,
                   ./images/John2-mob@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 768px)"
                   srcset="./images/John2-tab@1x.jpg 1x,
                   ./images/John2-tab@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 1200px)"
                   srcset="./images/John2-desk@1x.jpg 1x,
                   ./images/John2-desk@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
 
               <img
                 src="images/John2.jpg"
                 alt="Pracownik Product Designer"
-                width="270"
-                height="260"
+                class="our-team__images"
               />
               </picture>
               <p class="our-team-section__photos--names">
@@ -470,23 +468,22 @@
                   media="(max-width: 768px)"
                   srcset="./images/John3-mob@1x.jpg 1x,
                   ./images/John3-mob@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 768px)"
                   srcset="./images/John3-tab@1x.jpg 1x,
                   ./images/John3-tab@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 1200px)"
                   srcset="./images/John3-desk@1x.jpg 1x,
                   ./images/John3-desk@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
 
               <img
                 src="images/John3.jpg"
                 alt="Pracownik Product Designer"
-                width="270"
-                height="260"
+                class="our-team__images"
               />
               </picture>
               <p class="our-team-section__photos--names">
@@ -522,23 +519,22 @@
                   media="(max-width: 768px)"
                   srcset="./images/John4-mob@1x.jpg 1x,
                   ./images/John4-mob@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 768px)"
                   srcset="./images/John4-tab@1x.jpg 1x,
                   ./images/John4-tab@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
                 <source
                   media="(min-width: 1200px)"
                   srcset="./images/John4-desk@1x.jpg 1x,
                   ./images/John4-desk@2x.jpg 2x"
-                  type="image/jpg">
+                  type="image.jpg">
 
               <img
                 src="images/John4.jpg"
                 alt="Pracownik UI Designer"
-                width="270"
-                height="260"
+                class="our-team__images"
               />
               </picture>
               <p class="our-team-section__photos--names">
