--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper container">
-        <div>
+        <div class="footer__menu">
           <a href="index.html" class="page-name page-name__title page-name__footer">
             <span class="page-name__title--blue">Web</span>
             <span class="page-name__title--white">Studio</span>
