--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
       </section>
       <section class="segments">
-        <div class="container">
+        <div class="container margin">
           <h2 class="segments__header">Czym się zajmujemy</h2>
           <ul class="segments__list">
             <li>
@@ -348,7 +348,7 @@
         </div>
       </section>
       <section class="our-team-section">
-        <div class="container">
+        <div class="container margin">
           <h2 class="our-team-section__header">Nasz zespół</h2>
           <ul class="our-team-section__photos">
             <li class="our-team-section__photos--properties">
@@ -568,7 +568,7 @@
         </div>
       </section>
       <section class="customers-section">
-        <div class="container">
+        <div class="container margin">
           <h2 class="customers-section__header">Nasi klienci</h2>
           <ul class="customers">
             <li class="customers__list">
