--- a/index.html
+++ b/index.html
@@ -606,10 +606,11 @@
             </li>
           </ul>
         </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__wrapper container">
+      <div class="footer__container container">
         <div class="footer__menu">
           <a href="index.html" class="page-name page-name__title page-name__footer">
             <span class="page-name__title--blue">Web</span>
