--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
       </section>
       <section class="our-team-section">
-        <div class="container margin">
+        <div class="container margin our-team__container">
           <h2 class="our-team-section__header">Nasz zespół</h2>
           <ul class="our-team-section__photos">
             <li class="our-team-section__photos--properties">
@@ -610,7 +610,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__container container">
+      <div class=" container footer__container">
         <div class="footer__menu">
           <a href="index.html" class="page-name page-name__title page-name__footer">
             <span class="page-name__title--blue">Web</span>
