--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </header>
     <main>
       <section class="image-section">
-        <div class="container">
+        <div class="container image-section__container">
           <h1 class="image-section__text">
             <span class="image-section__text--properties"
               >EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</span
