--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </li>
           </ul>
           <ul class="menu menu__address">
-            <li>
+            <li class="menu__address-list">
               <a class="menu__address--text" href="mailto:info@devstudio.com">
                 <svg class="menu__address--icon">
                   <use xlink href="./images/icons.svg#icon-envelope"></use>
@@ -99,7 +99,7 @@
                 info@devstudio.com
               </a>
             </li>
-            <li>
+            <li class="menu__address-list">
               <a class="menu__address--text" href="tel:+48111111111">
                 <svg class="menu__address--icon">
                   <use xlink href="./images/icons.svg#icon-smartphone"></use>
